--- a/tracer-core/pom.xml
+++ b/tracer-core/pom.xml
@@ -14,18 +14,22 @@
         <dependency>
             <groupId>io.opentracing</groupId>
             <artifactId>opentracing-api</artifactId>
+            <version>0.33.0</version>
         </dependency>
         <dependency>
             <groupId>io.opentracing</groupId>
             <artifactId>opentracing-noop</artifactId>
+            <version>0.33.0</version>
         </dependency>
         <dependency>
             <groupId>io.opentracing</groupId>
             <artifactId>opentracing-mock</artifactId>
+            <version>0.33.0</version>
         </dependency>
         <dependency>
             <groupId>io.opentracing</groupId>
             <artifactId>opentracing-util</artifactId>
+            <version>0.33.0</version>
         </dependency>
 
         <dependency>
