update org.springframework.data:spring-data-mongodb 2.1.8.RELEASE to 3.4.1

--- a/tracer-sofa-boot-starter/pom.xml
+++ b/tracer-sofa-boot-starter/pom.xml
@@ -156,7 +156,7 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-mongodb</artifactId>
-            <version>2.1.8.RELEASE</version>
+            <version>3.4.1</version>
             <optional>true</optional>
         </dependency>
 
