--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,9 +22,9 @@ name: build
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master , 4.x]
   pull_request:
-    branches: [ master ]
+    branches: [ master , 4.x]
 
 jobs:
   build:
