--- a/pom.xml
+++ b/pom.xml
@@ -407,7 +407,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.18.1</version>
+                <version>3.0.0-M5</version>
                 <configuration>
                     <includes>
                         <!-- 这里需要根据自己的需要指定要跑的单元测试 -->
