--- a/sofa-tracer-plugins/sofa-tracer-dubbo-2.6.x-plugin/pom.xml
+++ b/sofa-tracer-plugins/sofa-tracer-dubbo-2.6.x-plugin/pom.xml
@@ -11,6 +11,10 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>sofa-tracer-dubbo-2.6.x-plugin</artifactId>
 
+    <properties>
+        <skipTests>true</skipTests>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.alibaba</groupId>
