--- a/pom.xml
+++ b/pom.xml
@@ -217,7 +217,7 @@
             <dependency>
                 <groupId>com.alipay.sofa.common</groupId>
                 <artifactId>sofa-common-tools</artifactId>
-                <version>2.0.0-SNAPSHOT</version>
+                <version>2.1.1</version>
             </dependency>
             <!-- HttpClient Dependency -->
             <dependency>
